<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/text_container"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#000"
    android:orientation="vertical"
    android:padding="@dimen/margin_and_padding">

    <TextView
        android:id="@+id/location_name_text_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/margin_and_padding"
        android:gravity="center_horizontal"
        android:textAppearance="?android:textAppearanceLarge"
        android:textAllCaps="true"
        android:textColor="@android:color/white"
        android:textStyle="bold" />
<androidx.cardview.widget.CardView
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    app:cardCornerRadius="15dp">
    <ImageView
    android:id="@+id/image"
    android:layout_width="match_parent"
    android:layout_height="@dimen/list_item_height"

    android:scaleType="centerCrop" />
</androidx.cardview.widget.CardView>



    <TextView
        android:paddingTop="@dimen/margin_and_padding"
        android:id="@+id/location_address_text_view"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginBottom="@dimen/margin_and_padding"
        android:textAppearance="?android:textAppearanceSmall"
        android:textColor="@android:color/white" />
    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/Addreview"
        android:text="Book"
        android:background="@drawable/list_item_color"
        android:textColor="#000000"
        android:padding="5dp"
        android:focusable="false"
        android:backgroundTint="#EF5350" />

</LinearLayout>
